[ch3751] Don t allow user to donate multiple monthly donations
https://app.clubhouse.io/enmarche/story/3751/emp%C3%AAcher-les-personnes-qui-font-d%C3%A9j%C3%A0-un-don-mensuel-d-en-faire-un-second

--- a/templates/donation/informations.html.twig
+++ b/templates/donation/informations.html.twig
@@ -67,7 +67,7 @@
 
         <div class="form__row form__checkbox form__checkbox--large">
             <input type="checkbox" required="required" id="donation_check" />
-            <label for="donation_check">
+            <label for="donation_check" id="donation_check_label">
                 Je certifie sur l'honneur être une personne physique et que le règlement de mon don
                 provient de mon compte bancaire personnel ou de celui de mon conjoint, concubin,
                 ascendant ou descendant.
@@ -76,7 +76,7 @@
 
         <div class="form__row form__checkbox form__checkbox--large">
             <input type="checkbox" required="required" id="donation_check_nationality" />
-            <label for="donation_check_nationality">
+            <label for="donation_check_nationality" id="donation_check_nationality_label">
                 Je certifie être de nationalité française ou résider fiscalement en France.
             </label>
         </div>
